--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ nav h1 {
 }
 #sub {
     display: flex;
+    justify-content: center;
+    margin-left: -10em;
 }
 #sub p{
     display: grid;
@@ -52,14 +54,15 @@ nav h1 {
     line-height: 28px;
 }
 .p11 {
-padding-left: 10em;
+    padding-left: 10em;
 }
 .number {
     display: flex;
+    justify-content: space-around;
     margin-top: 1.5em;
-    margin-left: 5em;
+    padding-left: 5.8em;
     font-family: Inter;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 600;
     line-height: 28px;
     letter-spacing: 0em;
@@ -140,4 +143,77 @@ form button {
 }
 form button:hover {
     background-color: #e49534d3;
+}
+@media screen and (max-width: 868px) {
+
+    .title{
+        margin-top: -2em;
+        margin-left: -0.5em;
+        padding-left: 30px;
+        font-size: 40px;
+        font-weight: bold;
+    }
+    .til {
+        width: 100%;
+        font-size: 20px;
+        font-weight: lighter;
+        margin-left: -0em;
+        padding-left: 10px;
+    }
+    .number {
+        display: grid;
+        grid-auto-flow: column;
+        font-size: 20px;
+        margin-left: -0em;
+        padding-left: 3em;
+        gap: 50px;
+    }
+    #sub {
+        display: grid;
+        grid-auto-flow: column;
+        gap: 30px;
+        padding-left: 10em;
+
+    }
+    #sub .p11 {
+        font-size: 12px;
+        margin-left: -10.3em;
+    }
+    article h1 {
+        margin-top: -13em;
+        display: grid;
+        grid-auto-flow: row;
+        margin-left: -5em;
+        font-size: 28px;
+        font-weight: bold;
+    }
+    article p {
+        display: grid;
+        grid-auto-flow: row;
+        margin-left: -7.8em;
+        margin-top: -20em;
+        font-size: 18px;
+    }
+    article figure img{
+        display: flex;
+        flex-direction: row;
+        margin-left: -31em;
+        margin-top: 12em;
+        width: 300px;
+        height: 500px;
+
+    }
+    form {
+        width: 100%;
+
+    }
+    form input {
+        width: 100%;
+    }
+    form button {
+        margin-left: 2em;
+
+    }
+
+
 }
